Style Sheet fixes & some layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ a:active { /* selected link */
     padding: 10px;
     border-radius: 3px;
     border-bottom: 2px solid #006d77; /* width of the border, type, color */
-    transition: 0.2s opacity;
+    transition: 0.6s opacity;
   }
 
 .button:visited { /* Visited link */
@@ -106,7 +106,8 @@ a:active { /* selected link */
 
 .button:hover,
 .button:focus {
-    opacity: 0.8; /* Reduces the opacity of the button to 80% */
+    background-color: #a0fee8;
+    opacity: 0.5; /* Reduces the opacity of the button to 80% */
     text-decoration: underline;
 }
 
@@ -122,12 +123,13 @@ a:active { /* selected link */
     padding: 10px;
     border-radius: 3px;
     border-bottom: 2px solid #006d77; /* width of the border, type, color */
-    transition: 0.2s opacity;
+    transition: 0.6s opacity;
   }
 
 .button.contact:hover,
 .button.contact:focus {
-    opacity: 0.8;
+    background-color: #a0fee8;
+    opacity: 0.5;
     text-decoration: underline;
   }  
 
@@ -142,7 +144,7 @@ a:active { /* selected link */
     padding: 10px;
     border-radius: 3px;
     border-bottom: 2px solid #006d77; /* width of the border, type, color */
-    transition: 0.2s opacity;
+    transition: 0.6s opacity;
   }
 
 .button.resume:visited { /* Visited link */
@@ -153,7 +155,7 @@ a:active { /* selected link */
     .button.resume:focus {
     background-color: #a0fee8;
     text-decoration: underline;
-    opacity: 0.8;
+    opacity: 0.5;
 }
 
 .button.resume:active { /* Selected link */
@@ -170,6 +172,10 @@ a:active { /* selected link */
     margin: 25px 0; /* 25px top and bottom, 0 left and right */
     }
 
+.space {
+        margin: 25px 0; /* 25px top and bottom, 0 left and right */
+        }
+
 #work .row { padding-bottom: 25px; border-bottom: 2px solid #373737; 
 
     }
@@ -182,9 +188,9 @@ a:active { /* selected link */
 
     }
 
-#hero h1 {
-        text-align: center; /* Centers text */
-        }
+#vela space { padding-bottom: 25px; 
+
+    }
 
 #work h2 {
             text-align: center; /* Centers text */
@@ -217,6 +223,7 @@ a:active { /* selected link */
             font-size: 1.75em;
             font-weight: 700;
             font-style: italic;
+            text-align: unset;
           }
 
 #vela h4 {
@@ -225,13 +232,18 @@ a:active { /* selected link */
             font-style: italic;
           }
 
+div.table_of_contents {
+        text-align: center;
+
+}
+
 .logo {
     max-width: 250px;
     }
 
 .picture {
-    width: 500px;
-    height: 500px;
+    max-width: 500px;
+    height: auto;
     margin: 0 auto;
     }
 
@@ -270,3 +282,210 @@ nav > ul > li > a {
         padding: 0 30px;
         color: #373737;
     }
+
+.workimage  {
+    width: 100%;
+    max-width: 100%;
+    height: auto;   
+}  
+
+@keyframes color-change {
+    from {fill: #edc655;}
+    to {fill: #f76414;}
+  }
+
+  .sun {
+    animation-duration: 4s;
+    animation-name: color-change;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: linear;
+  }
+
+@keyframes cloud-move {
+    from {transform: translate(0,50px);}
+    to {transform: translate(200px,50px);}
+  }
+
+  .cloud-front {
+    animation-duration: 30s;
+    animation-name: cloud-move;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: linear;
+  }
+
+@keyframes cloud-move-reverse {
+    from {transform: translate(446px,48px);}
+    to {transform: translate(100px, 48px);}
+  }
+
+.cloud-back {
+    animation: 55s cloud-move-reverse infinite alternate linear;
+  }
+  
+  .grow {
+    animation: grow 5s ease-in;
+  }
+  @keyframes grow {
+    from { transform: scale(0); }
+    to { transform: scale(1); }
+  }
+
+    /* ==============================
+Medium devices (640px and larger)
+================================= */
+@media only screen and (min-width: 640px) {
+    header {
+        text-align: unset;
+        padding: 20px 0 13px
+      }
+      nav {
+        width: auto;
+        float: right;
+        margin-top: 99px;
+      }
+
+#hero {
+    text-align: center; /* Centers text */
+    }
+
+#hero span {
+        display: block;
+      }
+
+.col-md-6 {
+    width: 50%;
+  }
+
+  .col-md-4 {
+    width: 25%;
+  }
+
+[class*="col-"] {
+    float: left;
+    padding: 10px;
+  }
+
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+#hero h3 { 
+    margin-top: 0;
+    }
+
+#about h3 { 
+    margin-top: 0;
+    }
+
+}
+
+/* ==============================
+Large devices (1024px or larger)
+================================= */
+@media only screen and (min-width: 1024px) {
+
+[class*="col-"] {
+        float: left;
+        padding: 10px;
+      }
+
+    .col-lg-6 {
+    width: 50%;
+    }
+
+.col-lg-5 {
+        width: 40%;
+      }
+
+.col-lg-7 {
+        width: 60%;
+      }
+
+.col-lg-7 img {
+        display: flex;
+        justify-content: space-around;
+        margin-right: 0px;
+}
+
+.col-lg-5 img {
+        display: flex;
+        justify-content: space-around;
+        margin-right: 0px;
+    }
+.col-lg-4 {
+        width: 25%;
+    }
+
+.col-lg-6 img {
+        display: flex;
+        justify-content: space-around;
+        margin-right: 0px;
+}
+
+.col-lg-8 {
+        width: 68%;
+
+    }  
+
+    .col-lg-8 img {
+        display: flex;
+        justify-content: space-around;
+        margin-right: 0px;
+    }
+
+.col-lg-9 {
+        width: 75%;
+
+    }
+
+    .container {
+        max-width: 1200px;
+        margin-left: auto;
+        margin-right: auto;
+      }
+
+      .row::after {
+        content: "";
+        clear: both;
+        display: table;
+      }
+}
+
+/* ==============================
+X-large devices (1440px or larger)
+================================= */
+@media only screen and (min-width: 1440px) {
+
+    [class*="col-"] {
+        float: left;
+        padding: 15px;
+      }   
+    .col-xl-4 {
+            width: 50%;
+            float: left;
+        }
+        .col-xl-2 {
+            width: 25%;
+            row-gap: 50px;
+            float:left;
+        }
+        .col-xl-6 {
+            width: 75%;
+        }
+        .container {
+            max-width: 1440px;
+            margin-left: auto;
+            margin-right: auto;
+        }  
+
+        .row::after {
+            content: "";
+            clear: both;
+            display: table;
+          }
+    }
+
